# kafka-mocha

./: .coveragerc  .gitignore  CLAUDE.md  CONTRIBUTING.md  README.md  clear_test_artifacts.sh  pyproject.toml  pytest.ini
.github/workflows/: pypi-publish.yml
examples/: README.md  a_simple_consumer.py  a_simple_producer.py  a_simple_prosumer.py  a_transactional_producer.py  a_transactional_prosumer.py  avro_consumer.py  avro_producer.py  avro_transactional_prosumer.py  confexmp.py  json_consumer.py  json_producer.py  models.py  simple_consumer.py  simple_producer.py  simple_prosumer.py  transactional_producer.py
examples/inputs/: users-registrations-in-avro-2.json  users-registrations-in-avro.json  users-registrations-in-json.json  users-registrations.json
examples/outputs/: .gitignore  messages.csv  messages.html  user-registered.avsc.csv  user-registered.json.csv  with-transaction.html
examples/schemas/: event-envelope.avsc  struct-key.avsc  user-registered.avsc  user-registered.json
kafka_mocha/: __init__.py  buffer_handler.py  kafka_simulator.py  klogger.py  kmodels.py  kproducer.py  message_buffer.py  models.py  renderers.py  signals.py  ticking_thread.py  transaction_coordinator.py  utils.py  wrappers.py
kafka_mocha/core/: buffer_handler.py  kafka_simulator.py  kconsumer.py  kproducer.py  ticking_thread.py
kafka_mocha/exceptions/: __init__.py
kafka_mocha/models/: kmodels.py  ktypes.py
kafka_mocha/schema_registry/: __init__.py  exceptions.py  mock_schema_registry_client.py  schema_registry_client.py  srlogger.py  wrappers.py
kafka_mocha/templates/: messages.csv.jinja  messages.html.jinja  messages.json.jinja
tests/: conftest.py  pytest.ini
tests/e2e/: full-stack.yml  test_kproducer.py
tests/integration/: test_kafka_simulator.py  test_kconsumer.py  test_kpoducer.py  test_reloads_kafka_simulator.py  test_schema_registry.py
tests/unit/: conftest.py  test_kafka_simulator.py  test_kafka_simulator_transaction_coordinator.py  test_klogger.py  test_kmodels.py  test_kproducer.py  test_models.py  test_partitioners.py  test_renderers.py  test_signals.py  test_srlogger.py  test_utils.py
tests/unit/core/: test_kafka_simulator_transaction_coordinator.py  test_kconsumer.py  test_kproducer.py  test_partitioners.py
tests/unit/models/: test_kmodels.py  test_signals.py
tests/unit/schema_registry/: test_srlogger.py
