[tool.poetry]
name = "kafka-mocha"
version = "0.1.0a1"
description = "A Kafka mock library that is designed to be used in integration tests for applications using librdkafka."
license = "MIT"
authors = ["and-ratajski <andrzej.ratajski@effiware.com>"]
readme = "README.md"
homepage = "https://python-poetry.org/"
repository = "https://github.com/python-poetry/poetry"
packages = [{include = "kafka_mocha"}]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.poetry.dependencies]
python = "^3.12"
pydantic = "^2.9.2"
confluent-kafka = "^2.6.0"

[tool.poetry.group.test.dependencies]
pytest = "^8.3.3"
pytest-env = "^1.1.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ["py312"]
