[tool.poetry]
name = "kafka-mocha"
version = "0.1.0a6"
description = "A Kafka mock library that is designed to be used in integration tests for applications using librdkafka."
license = "MIT"
authors = ["and-ratajski <and.ratajski@effiware.com>"]
readme = "README.md"
homepage = "https://github.com/Effiware/kafka-mocha/wiki"
repository = "https://github.com/Effiware/kafka-mocha"
packages = [{include = "kafka_mocha"}]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.poetry.dependencies]
python = "^3.12"
pydantic = "^2.9.2"
confluent-kafka = "^2.6.0"
Jinja2 = "^3.1.5"

[tool.poetry.group.test.dependencies]
pytest = "^8.3.3"
pytest-env = "^1.1.5"
moto = "^5.0.24"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ["py312"]
