[tool.poetry]
name = "kafka-mocha"
version = "1.0.0b1"
description = "A Kafka mock library that is designed to be used in integration tests for applications using librdkafka."
license = "MIT"
authors = ["and-ratajski <and.ratajski@effiware.com>"]
readme = "README.md"
homepage = "https://github.com/Effiware/kafka-mocha/wiki"
repository = "https://github.com/Effiware/kafka-mocha"
packages = [{include = "kafka_mocha"}]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.poetry.dependencies]
python = "^3.11"
Jinja2 = "^3.1.5"

[tool.poetry.group.test.dependencies]
pytest = "^8.3.3"
pytest-env = "^1.1.5"
pytest-cov = "^6.0.0"
isort = "^5.13.2"
black = {extras = ["d"], version = "^25.1.0"}
confluent-kafka = "^2.4.0, !=2.6.2, !=2.8.1"
httpx = "^0.28.1"
cachetools = "^5.5.1"
fastavro = "^1.10.0"
referencing = "^0.36.2"
jsonschema = "^4.23.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ["py311"]
